--- a/recruit-gui/src/app/contact/contact.component.html
+++ b/recruit-gui/src/app/contact/contact.component.html
@@ -11,7 +11,7 @@
 		  <table>
 			<tr>
 				<th>{{ "arenella-contact-company-name" | translate }}</th>
-				<td>Ahrenella-ICT</td>
+				<td>Arrenella-ICT</td>
 			</tr>
 			<tr>
 				<th>{{ "arenella-contact-company-address" | translate }}</th>
