--- a/recruit-gui/src/app/create-candidate/create-candidate.component.html
+++ b/recruit-gui/src/app/create-candidate/create-candidate.component.html
@@ -1,120 +1,122 @@
 <div class="page">
 	<div class="nav-tabs-bar"></div>
-    <div class="page-body">
-		<form [formGroup]="formBean">
-			<div>
-				<div class="candidate-signup-page">
-            		<h1>{{'arenella-create-candidate-title' | translate}}</h1>
-            		<p class="creat-candidate-intro">{{'arenella-create-candidate-intro' | translate}}</p>
-            	</div>
-            	<div class="candidate-signup-panel">
-					<div class="div-spacing">
-						<p style="border-bottom:2px solid black;">{{'arenella-create-candidate-curriculum' | translate}}</p>
-						<input type="file" (change)="uploadCurriculumFile($event)">
-					</div>
-					<div class="div-spacing">
-						<table>
-							<tr>
-								<th class="tb-lbl">{{'arenella-create-candidate-firstname' | translate}}</th>
-								<td><input type="text" class="inpt-tab-std" formControlName="firstname"/></td>
-							</tr>
-							<tr>
-								<th class="tb-lbl">{{'arenella-create-candidate-surname' | translate}}</th>
-								<td><input type="text" class="inpt-tab-std" formControlName="surname"/></td>
-							</tr>
-							<tr>
-								<th class="tb-lbl">{{'arenella-create-candidate-email' | translate}}</th>
-								<td><input type="text" class="inpt-tab-std" formControlName="email"/></td>
-							</tr>
-						</table>
-					</div>
-					<div class="div-spacing">
-						<table>
-							<tr>
-								<th class="tb-lbl-checkbox">{{'arenella-create-candidate-contract' | translate}}</th>
-								<td><input type="checkbox" formControlName="contract" (click)="updateContract()"/></td>
-							</tr>
-							<tr>
-								<th class="tb-lbl-checkbox">{{'arenella-create-candidate-perm' | translate}}</th>
-								<td><input type="checkbox" formControlName="perm" (click)="updatePerm()"/></td>
-							</tr>
-						</table>
-					</div>
-					<div class="additional-info">
-						<h3>{{'arenella-create-candidate-additional-info-title' | translate}}</h3>
-						<div>
-								<p>{{'arenella-create-candidate-additional-info-text' | translate}}
-								
-								</p>
-							</div>
-							<div class="div-spacing">
-								<p style="border-bottom:2px solid black;">{{'arenella-create-candidate-photo' | translate}}</p>
-								<input type="file" accept="image/jpeg,image/png" (change)="uploadProfileImage($event)">
-							</div>
-							<br>
-							<div>
-								<table>
-									<tr class="{{contractRoleClass}}">
-										<td class="hdr-label">{{'arenella-create-candidate-contract-rate' | translate}}</td>
-										<td>
-											<select formControlName="contractCurrency">
-												<option value="EUR">{{'arenella-create-candidate-eur' | translate}}</option>
-												<option value="GBP">{{'arenella-create-candidate-gbp' | translate}}</option>
-											</select>
-											<select formControlName="contractTimeUnit">
-												<option value="HOUR">{{'arenella-create-candidate-hour' | translate}}</option>
-												<option value="DAY">{{'arenella-create-candidate-day' | translate}}</option>
-												<option	value="YEAR">{{'arenella-create-candidate-year' | translate}}</option>
-											</select>
-										{{'arenella-create-candidate-from' | translate}}: <input type="number" formControlName="contractFrom">
-										{{'arenella-create-candidate-to' | translate}}: <input type="number" formControlName="contractTo">
-									</tr>
-									
-									<tr class="{{permRoleClass}}">
-										<td class="hdr-label">{{'arenella-create-candidate-perm-rate' | translate}}</td>
-										<td>
-											<select formControlName="permCurrency">
-												<option value="EUR">{{'arenella-create-candidate-eur' | translate}}</option>
-												<option value="GBP">{{'arenella-create-candidate-gbp' | translate}}</option>
-											</select>
-										
-											<select formControlName="permTimeUnit">
-												<option value="HOUR">{{'arenella-create-candidate-hour' | translate}}</option>
-												<option value="DAY">{{'arenella-create-candidate-day' | translate}}</option>
-												<option	value="YEAR">{{'arenella-create-candidate-year' | translate}}</option>
-											</select>
-											{{'arenella-create-candidate-from' | translate}}: <input type="number" formControlName="permFrom"> {{'arenella-create-candidate-to' | translate}}: <input type="number" formControlName="permTo">
-										</td>	
-									</tr>
-								</table>
-							</div>
-							
+    <div class="page-body" style="width:95%;">
+    	<div class="center-div">
+    		<form [formGroup]="formBean">
+    			<!-- Left pane -->
+    			<div class="create-candidatepane create-candidateleftpane">
+    				<div class="candidate-signup-page">
+            			<h1 class="public-hdr">{{'arenella-create-candidate-title' | translate}}</h1>
+            			<div class="createcanidate-intro-text">
+            				<p>{{'arenella-create-candidate-intro' | translate}}</p>
+            			</div>
+            		</div>
+            		<div class="candidate-signup-panel">
+						<div class="div-spacing">
+							<h5 style="border-bottom:2px solid #002549;color:#002549;font-weight:bold">{{'arenella-create-candidate-curriculum' | translate}}</h5>
+							<input type="file" (change)="uploadCurriculumFile($event)">
+						</div>
+						<div class="div-spacing">
+							<table>
+								<tr>
+									<th class="tb-lbl">{{'arenella-create-candidate-firstname' | translate}}</th>
+									<td><input type="text" class="inpt-tab-std" formControlName="firstname"/></td>
+								</tr>
+								<tr>
+									<th class="tb-lbl">{{'arenella-create-candidate-surname' | translate}}</th>
+									<td><input type="text" class="inpt-tab-std" formControlName="surname"/></td>
+								</tr>
+								<tr>
+									<th class="tb-lbl">{{'arenella-create-candidate-email' | translate}}</th>
+									<td><input type="text" class="inpt-tab-std" formControlName="email"/></td>
+								</tr>
+							</table>
+						</div>
+						<div class="div-spacing">
+							<table>
+								<tr>
+									<th class="tb-lbl">{{'arenella-create-candidate-contract' | translate}}</th>
+									<td><input type="checkbox" formControlName="contract" (click)="updateContract()"/></td>
+								</tr>
+								<tr>
+									<th class="tb-lbl">{{'arenella-create-candidate-perm' | translate}}</th>
+									<td><input type="checkbox" formControlName="perm" (click)="updatePerm()"/></td>
+								</tr>
+							</table>
+						</div>
+						<div class="salary-info">
+							<table>
+								<tr class="{{contractRoleClass}} ">
+									<td class="hdr-label">{{'arenella-create-candidate-contract-rate' | translate}}</td>
+								</tr>
+								<tr class="{{contractRoleClass}} ">
+									<td>
+										<select formControlName="contractCurrency">
+											<option value="EUR">{{'arenella-create-candidate-eur' | translate}}</option>
+											<option value="GBP">{{'arenella-create-candidate-gbp' | translate}}</option>
+										</select>
+										<select formControlName="contractTimeUnit">
+											<option value="HOUR">{{'arenella-create-candidate-hour' | translate}}</option>
+											<option value="DAY">{{'arenella-create-candidate-day' | translate}}</option>
+											<option	value="YEAR">{{'arenella-create-candidate-year' | translate}}</option>
+										</select>
+										<input class="salaryInput" type="number" formControlName="contractFrom">
+										<span class="hdr-label contract-to-lable" style="margin-right:0px;">{{'arenella-create-candidate-to' | translate}}: </span><input class="salaryInput" type="number" formControlName="contractTo">
+								</tr>
+								<tr class="{{permRoleClass}}">
+									<td class="hdr-label">{{'arenella-create-candidate-perm-rate' | translate}}</td>
+								</tr>
+								<tr class="{{permRoleClass}} ">	
+									<td>
+										<select formControlName="permCurrency">
+											<option value="EUR">{{'arenella-create-candidate-eur' | translate}}</option>
+											<option value="GBP">{{'arenella-create-candidate-gbp' | translate}}</option>
+										</select>
+										<select formControlName="permTimeUnit">
+											<option value="HOUR">{{'arenella-create-candidate-hour' | translate}}</option>
+											<option value="DAY">{{'arenella-create-candidate-day' | translate}}</option>
+											<option	value="YEAR">{{'arenella-create-candidate-year' | translate}}</option>
+										</select>
+										 <input class="salaryInput" type="number" formControlName="permFrom"> 
+										<span class="hdr-label contract-to-lable" style="margin-right:0px;">{{'arenella-create-candidate-to' | translate}}: </span><input class="salaryInput" type="number" formControlName="permTo">
+									</td>	
+								</tr>
+							</table>
+						</div>
+    				</div>
+    			</div>
+    		
+    			<!--Right pane -->
+    			<div class="create-candidatepane create-candidaterightpane">
+    				<div class="additional-info">
+						<h1 class="public-hdr">{{'arenella-create-candidate-additional-info-title' | translate}}</h1>
+						<div class="createcanidate-intro-text">
+							<p>{{'arenella-create-candidate-additional-info-text' | translate}}</p>
+						</div>
+						<div class="div-spacing">
+							<h5 style="border-bottom:2px solid #002549;color:#002549;font-weight:bold">{{'arenella-create-candidate-photo' | translate}}</h5>
+							<input type="file" accept="image/jpeg,image/png" (change)="uploadProfileImage($event)">
 						</div>
 						<br>
 						<div>
 							<b>{{'arenella-create-candidate-personal-intro' | translate}}</b>
-							<br>
 							<div>
 								<textarea formControlName="introduction"></textarea>
 							</div>
-							
 						</div>
 						<div class="div-spacing">
-							<p>{{'arenella-create-candidate-agreement' | translate}}
-							
-							</p>
+							<p>{{'arenella-create-candidate-agreement' | translate}}</p>
 							<div>
 								<div class="action-buttons">
 									<button (click)="addCandidate()" [disabled]="uploadButtonDisabled()" class="btn btn-secondary arenella-btn">{{'arenella-create-candidate-btn-save' | translate}}</button>
-									
 								</div>
 							</div>
 						</div>
-						<br>
 					</div>
-				</div>
+    			</div>
 			</form>
-		</div>
+    	</div>
+	</div>
 </div>   
 
 <dialog #feedbackBox >
