--- a/recruit-gui/src/app/login-user/login-user.component.html
+++ b/recruit-gui/src/app/login-user/login-user.component.html
@@ -51,7 +51,7 @@
 							</tr>
 							
 							<tr>
-								<td colspan="2">
+								<td colspan="2" style="text-align:center;">
 									<button class="btn btn-secondary arenella-btn forgotten-password-button" (click)="resetPassword()">{{"arenella-login-user-reset" | translate}}</button>
 									<button class="btn btn-secondary arenella-btn forgotten-password-button" (click)="cancelResetPassword()">{{"arenella-login-user-cancel" | translate}}</button>
 								</td>
