--- a/recruit-gui/src/app/suggestions/candidate-profile/candidate-profile.component.css
+++ b/recruit-gui/src/app/suggestions/candidate-profile/candidate-profile.component.css
@@ -9,18 +9,18 @@
 }
 
 .suggestion-perception-perfect{
-	background:#002549;
+	background:#393f91;
 	width:100%;	
 	height:10px;
 }
 
 suggestion-perception-excellent{
-	background:#002549;
+	background:#393f91;
 	width:90%;
 	height:10px;
 }
 .suggestion-perception-good{
-	background:#002549;
+	background:#393f91;
 	width:75%;
 	height:10px;
 }
@@ -36,7 +36,7 @@ suggestion-perception-excellent{
 }
 
 .suggestion-perception-result-perfect{
-	background:#002549;
+	background:#393f91;
 	width:100%;	
 	height:8px;
 	border-bottom: 1px solid black;
@@ -68,15 +68,9 @@ suggestion-perception-excellent{
 		text-align:center;
 	}	
 }
-.suggestion-perception-result-perfect{
-	background:#002549;
-	width:100%;	
-	height:8px;
-	border-bottom: 1px solid black;
-}
 
 .suggestion-perception-result-excellent{
-	background:#002549;
+	background:#393f91;
 	width:90%;
 	height:8px;
 	border-bottom: 1px solid black;
@@ -84,7 +78,7 @@ suggestion-perception-excellent{
 }
 
 .suggestion-perception-result-good{
-	background:#002549;
+	background:#393f91;
 	width:75%;
 	height:8px;
 	border-bottom: 1px solid black;
@@ -111,7 +105,8 @@ suggestion-perception-excellent{
 	margin:2px;
 	padding:5px;
 	border-radius:5px;
-	background:#002549;
+	background:#393f91;
+	color:white;
 	display:inline-block;	
 }
 
