--- a/recruit-gui/src/app/suggestions/suggestions.component.two.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.two.css
@@ -1,10 +1,10 @@
 .suggestion-perception-excellent{
-	background:green;
+	background:#002549;
 	width:90%;
 	height:10px;
 }
 .suggestion-perception-good{
-	background:green;
+	background:#002549;
 	width:75%;
 	height:10px;
 }
@@ -20,21 +20,14 @@
 }
 
 .suggestion-perception-result-perfect{
-	background:green;
-	width:100%;	
-	height:8px;
-	border-bottom: 1px solid black;
-}
-
-.suggestion-perception-result-perfect{
-	background:green;
+	background:#393f91;
 	width:100%;	
 	height:8px;
 	border-bottom: 1px solid black;
 }
 
 .suggestion-perception-result-excellent{
-	background:green;
+	background:#393f91;
 	width:90%;
 	height:8px;
 	border-bottom: 1px solid black;
@@ -42,7 +35,7 @@
 }
 
 .suggestion-perception-result-good{
-	background:green;
+	background:#393f91;
 	width:75%;
 	height:8px;
 	border-bottom: 1px solid black;
