--- a/recruit-gui/src/app/suggestions/searchbar/searchbar.component.html
+++ b/recruit-gui/src/app/suggestions/searchbar/searchbar.component.html
@@ -110,7 +110,12 @@
 					<td class="sugg-srch-bdy" *ngIf="showLanguageFilters">
 						<p class="toggle-filter-option" (click)="switchLanguageFilterView('')">{{'Hide' | translate}}..</p>
 						<ul class="sugg-srch-ctry-ul">
-							<li class="sugg-srch-ctry-chkbox" *ngFor="let lang of supportedLanguages"><input type="checkbox" [formControlName]="lang.languageCode.toLowerCase()+'Language'" class="lang-checkbox">{{lang.languageCode | translate}}</li>
+						
+						
+						
+							<li class="sugg-srch-ctry-chkbox" *ngFor="let lang of supportedLanguages">
+								<input type="checkbox" [formControlName]="lang.languageCode.toLowerCase()+'Language'" class="lang-checkbox">{{lang.languageCode | translate}}
+							</li>
 						</ul>					
 					</td>
 				</tr>
@@ -249,11 +254,16 @@
 						<td>{{ss.searchName}}</td>
 						
 						<td>
-							<input type="checkbox" class="sugg-srch-job-title" *ngIf="ss != acitveSavedCandidateSearch" disabled>
-							<input type="checkbox" class="sugg-srch-job-title" *ngIf="ss == acitveSavedCandidateSearch">
+						
+							<input type="checkbox" class="sugg-srch-job-title" *ngIf="ss != acitveSavedCandidateSearch && ss.emailAlert == false" disabled>
+							<input type="checkbox" class="sugg-srch-job-title" *ngIf="ss != acitveSavedCandidateSearch && ss.emailAlert == true" disabled checked>
+							
+							
+							<input type="checkbox" class="sugg-srch-job-title" *ngIf="ss == acitveSavedCandidateSearch && ss.emailAlert == true" (click)="enableSavedSearchEmails()" checked>
+							<input type="checkbox" class="sugg-srch-job-title" *ngIf="ss == acitveSavedCandidateSearch && ss.emailAlert == false" (click)="enableSavedSearchEmails()">
 						</td>
 						
-						<td>
+						<td> 
 							
 							<button *ngIf="ss == acitveSavedCandidateSearch" class="btn btn-secondary" (click)="runSavedSearch(ss)"		 download>Run</button>
 							<button *ngIf="ss == acitveSavedCandidateSearch" class="btn btn-secondary" (click)="updateSavedSearch()" 	 download>Update</button>
@@ -266,6 +276,7 @@
 						</td>
 						
 					</tr>
+					
 				</table>
 			</form>
 		</div>
